--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,33 @@ services:
       - 9009:9009
     networks:
         - kind
-
+  kafka:
+    container_name: kind-kafka
+    image: 'bitnami/kafka:latest'
+    ports:
+      - 9092:9092
+    networks:
+      - kind
+    environment:
+      - KAFKA_ENABLE_KRAFT=yes
+      - KAFKA_CFG_PROCESS_ROLES=broker,controller
+      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kind-kafka:9092
+      - KAFKA_BROKER_ID=1
+      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@kind-kafka:9093
+      - ALLOW_PLAINTEXT_LISTENER=yes
+  kafka-ui:
+    container_name: kind-kafka-ui
+    image: provectuslabs/kafka-ui:v0.4.0
+    ports:
+      - 18080:8080
+    networks:
+      - kind
+    environment:
+      - KAFKA_CLUSTERS_0_BOOTSTRAP_SERVERS=kind-kafka:9092
+      - KAFKA_CLUSTERS_0_NAME=kind-kafka
 networks:
   kind:
     external: true
